responsive huge gap fix and input field

--- a/src/App.css
+++ b/src/App.css
@@ -122,7 +122,3 @@
 .card {
   padding:33px 24px;
 }
-.square {
-  width:'26.25rem';
-  height:'23.37rem';
-}
